--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,9 @@
     <version>1.0-SNAPSHOT</version>
     <name>rosling</name>
     <description>rosling - Rails On Sling</description>
+    <properties>
+        <felixUrl>http://localhost:8080/system/console</felixUrl>
+    </properties>
     <build>
         <plugins>
 
@@ -84,7 +87,7 @@
                         </goals>
                         <configuration>
                             <slingUrl>
-                                http://localhost:8080/system/console
+                                ${felixUrl}
                             </slingUrl>
                             <user>admin</user>
                             <password>admin</password>
@@ -143,31 +146,7 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.16</version>
         </dependency>
-        <!--
-        <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>com.springsource.freemarker</artifactId>
-            <version>2.3.15</version>
-        </dependency>
-        -->
-    </dependencies>
-    <!--
-    <repositories>
-        <repository>
-            <id>com.springsource.repository.bundles.release</id>
-            <name>SpringSource Enterprise Bundle Repository - SpringSource
-                Bundle Releases
-            </name>
-            <url>http://repository.springsource.com/maven/bundles/release</url>
-        </repository>
 
-        <repository>
-            <id>com.springsource.repository.bundles.external</id>
-            <name>SpringSource Enterprise Bundle Repository - External Bundle
-                Releases
-            </name>
-            <url>http://repository.springsource.com/maven/bundles/external</url>
-        </repository>
-    </repositories>
-    -->
+    </dependencies>
+
 </project>
